[package]
name = "secretbet_table_roulette"
version = "0.1.0"
authors = ["SecretBet <chlrltkd0@gmail.com>"]
edition = "2018"
description = "Secret Bet Table Roulette"
license = "Apache-2.0"
repository = "https://github.com/wasmbet/secretbet-contract"
homepage = "https://wasmbet.com"
documentation = "https://docs.wasmbet.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.3.2" }
cw2 = { path = "../../packages/cw2", version = "0.3.2" }
cw20 = { path = "../../packages/cw20", version = "0.3.2" }
cosmwasm-std = { version = "0.12.0-alpha2", features = ["iterator"] }
cosmwasm-storage = { version = "0.12.0-alpha2", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = { version = "0.12.0-alpha2" }
